# EcoTrack-Climate-World-Bank-App

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  climat-1.ipynb  config.py  docker-compose.yml  main.py  requirements.txt
app/: streamlit_app.py
co2-extractor-wb/: README.md  pyproject.toml
co2-extractor-wb/src/co2_extractor/: __init__.py  web_api.py
co2-extractor-wb/src/co2_extractor_wb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: analyzer.py  data_loader.py  processor.py
