[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "co2-extractor-wb"
license = {text = "MIT"}
version = "0.1.1"
authors = [{name = "Céline ADOUSSINGANDE", email = "mauriceteadoussingande@yahoo.com"}]
description = "Une librairie pour extraire les données CO2 de la Banque Mondiale"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas"
]

# AJOUTEZ CECI :
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["co2_extractor*"]